--- a/style.css
+++ b/style.css
@@ -1,488 +1,349 @@
-/* Universal Styles */
+/* Navigation-Bar setting */
 
-html {
-  font-size: 16px;
+.main-container {
+    font-family: Arial;
+    height: 64px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
+#logogrp {
+    display: flex;
+    flex-direction: row;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
+#bargrp {
+    display: flex;
+    align-items: center;
 }
 
-strong {
-  font-weight: bold;
+.logo {
+    padding-left: 24px;
+    align-items: center;
 }
 
-.image-container {
-  overflow: hidden;
+.text {
+    height: 32px;
+    align-items: center;
+    padding: 22px 0px;
 }
 
-.image-container img {
-  display: block;
-  max-width: 100%;
+.Navigation-Bar {
+    display: flex;
+    flex-direction: row;
 }
 
-@media only screen and (max-width: 990px) {
-  html {
-    font-size: 14px;
-  }
+.link {
+    margin-right: 8px;
+    margin-left: 8px;
 }
 
-/* Header */
 
-header {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem 3.75rem;
-  background-color: orange;
+/* frist-bar */
+
+.frist-bar {
+    background-color: rgb(216 216 216);
+    font-family: Arial;
+    display: flex;
+    align-items: center;
+    padding: 32px 24px;
 }
 
-header .logo-small {
-  display: none;
-}
-
-header .logo-small,
-header .logo-big {
-  flex-grow: 1;
-}
-
-nav li {
-  display: inline;
-  padding-right: 2rem;
-}
-
-nav li:last-child {
-  padding-right: 0;
-}
-
-@media only screen and (max-width: 990px) {
-  header .logo-big {
-    display: none;
-  }
-
-  header .logo-small {
-    display: block;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  header {
+#frist-bar-img {
+    width: 60%;
+    margin: 0px;
+    display: flex;
     flex-direction: column;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  header .logo-small {
-    margin-bottom: 1rem;
-  }
 }
 
-/* Banner */
-
-#banner {
-  position: relative;
-  height: 43.75rem;
-  padding: 0 25%;
-  background: url("	https://content.codecademy.com/courses/freelance-1/unit-6/banner.png")
-    center center no-repeat;
-  background-size: cover;
-  text-align: center;
-}
-
-#banner:before {
-  /* Orange Overlay */
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: rgba(255, 128, 0, 0.75);
-}
-
-#banner * {
-  position: relative; /* Makes elements display above overlay. */
+.frist-bar-text {
+    padding-left: 24px;
+    padding-right: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 h1 {
-  padding-top: 10.4375rem;
-  padding-bottom: 1.25rem;
-  font-family: "Creepster", cursive;
-  font-size: 8rem;
-  color: rgba(0, 0, 0, 0.7);
+    font-size: 30px;
 }
 
-#banner p {
-  color: white;
-  line-height: 1.5;
-  font-size: 1.375rem;
+h4 {
+    line-height: 5px;
 }
 
-@media only screen and (max-width: 820px) {
-  h1 {
-    padding-top: 7rem;
-    font-size: 6rem;
-  }
+.button {
+    padding: 8px 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
 
-@media only screen and (max-width: 590px) {
-  h1 {
-    font-size: 4rem;
-  }
-}
-
-/* Color Guide */
-
-#color-guide {
-  padding: 3.875rem 15% 13.5rem 15%;
-}
-
-#color-guide .introduction {
-  padding: 0 10%;
-  margin-bottom: 0.75rem;
-  text-align: center;
-  font-size: 1.375rem;
-  line-height: 1.4;
-}
-
-#color-guide h2 {
-  margin-bottom: 2.4375rem;
-  line-height: 1;
-  font-size: 2rem;
-  color: orange;
-}
-
-#color-guide .color {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 5.25rem;
-}
-
-.color .information {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 35%;
-}
-
-.color .information h3 {
-  padding-bottom: 0.5rem;
-  font-size: 1.375rem;
-  font-weight: bold;
-}
-
-.color .information p {
-  font-size: 0.875rem;
-  line-height: 1.4;
-}
-
-.color .swatches {
-  width: 60%;
-}
-
-.color .swatches h4 {
-  margin-bottom: 1.25rem;
-  font-size: 1.125rem;
-  font-weight: bold;
-  color: #9b9b9b;
-}
-
-.color .swatch {
-  display: flex;
-  height: 6.6875rem;
-  border: 10px solid #e6e6e6;
-  margin-bottom: 1.25rem;
-}
-
-.color .swatch:last-child {
-  margin-bottom: 0;
-}
-
-.color .swatch > div {
-  flex-grow: 1;
-  border-right: 10px solid #e6e6e6;
-}
-
-.color .swatch > div:last-child {
-  border-right: 0;
-}
-
-@media only screen and (max-width: 820px) {
-  #color-guide .color {
+#bargrp {
+    display: flex;
     flex-direction: column;
+    justify-content: space-around;
+}
+
+
+/* three bar */
+
+.three-bar {
+    background-color: white;
+    font-family: Arial;
+    display: flex;
     align-items: center;
-  }
+    padding: 32px 24px;
+}
 
-  .color .information {
-    width: 100%;
-    margin-bottom: 3rem;
+#three-bar-img {
+    width: 60%;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 24px;
+}
+
+h1 {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 32px;
+    margin: 0;
+}
+
+h4 {
+    font-family: Arial, sans-serif;
+    font-style: italic;
+    text-align: center;
+    line-height: 20px;
+    padding-top: 24px;
+    margin: 0;
+    font-size: 15px;
+}
+
+.box {
+    display: flex;
     align-items: center;
-  }
+    border: solid rgba(165, 163, 163, 0.712) 1px;
+    padding-right: 16px;
+    box-sizing: border-box;
+    padding: 16px;
+}
 
-  .color .information h3 {
-    padding-bottom: 1.5rem;
-  }
+.box-photo {
+    width: 40%;
+}
 
-  .color .information p {
-    margin-bottom: 2rem;
-  }
+.three-bar .box-img {
+    width: 35%;
+    height: auto;
+    margin: 0px;
+}
 
-  .color .swatches {
+.box .bx-text {
+    width: 65%;
+}
+
+h2 {
+    margin: 0;
+}
+
+h5 {
+    margin: 0;
+    padding-top: 8px;
+}
+
+
+/* four bar */
+
+.four-bar {
+    background-color: rgba(221, 221, 221, 0.877);
+}
+
+h3 {
+    text-align: center;
+}
+
+.photo-box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-left: 72px;
+    padding-right: 72px;
+}
+
+.box-img-01 {
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 16px;
+    background-color: rgba(255, 255, 255, 0.918);
+    padding-bottom: 16px;
+    width: 25%;
+    min-height: 20rem;
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
+
+.photo-box img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.photo-box figure {
+    max-width: auto;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+}
+
+.box-img-01 h3 {
+    margin: 0;
+    padding: 16px;
+}
+
+.classes {
+    margin: 0;
+    text-transform: capitalize;
+    padding: 0 14 24 16;
+}
+
+.courses {
+    text-transform: uppercase;
+    padding: 8px 16px;
+    margin: 0;
+}
+
+
+/* five bar */
+
+.five-bar {
+    display: flex;
+    padding: 32px 24px;
+}
+
+.right-photo {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.left {
+    width: 60%;
+    overflow: hidden;
+    padding-right: 1.5rem;
+}
+
+.left img,
+.left video {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.text-01 {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    font-style: italic;
+    padding-bottom: 32px;
+}
+
+.left h3 {
+    margin: 0;
+    padding-top: 24px;
+    padding-bottom: 8px;
+}
+
+.box-bg-color {
+    display: flex;
+    align-items: center;
+    border: solid rgba(187, 223, 223, 0.4) 1px;
+    padding-right: 1rem;
+}
+
+.box-01 {
+    display: flex;
+    align-items: center;
+    border: solid rgba(187, 223, 223, 0.4) 1px;
+    padding-right: 1rem;
+}
+
+.left .text {
+    font-family: "roboto", sans-serif;
+    font-style: italic;
+    padding-bottom: 32px;
+}
+
+.box-bg-photo {
+    display: flex;
+    align-items: center;
+    border: solid rgba(187, 223, 223, 0.4) 1px;
+    padding-right: 1rem;
+}
+
+.box-bg-photo .dst {
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
+
+.figure {
+    width: 35%;
+}
+
+.figure img.dst {
     width: 100%;
-  }
 }
 
-/* Red Swatches */
-
-.reds .base-color {
-  color: hsl(350, 100%, 50%);
+.box-01 .text-02,
+.box-bg-color .text-02 {
+    align-items: center;
+    width: 65%;
 }
 
-/* Red lightness decreases by 15 */
-.reds .lightness .color-1 {
-  background-color: hsl(350, 100%, 80%);
+.box-01 .text-01 {
+    width: 65%;
 }
 
-.reds .lightness .color-2 {
-  background-color: hsl(350, 100%, 65%);
+.exhibit {
+    display: flex;
+    flex-direction: row;
 }
 
-.reds .lightness .color-3 {
-  background-color: hsl(350, 100%, 50%);
+.five-bar-text {
+    text-align: center;
 }
 
-.reds .lightness .color-4 {
-  background-color: hsl(350, 100%, 35%);
-}
 
-.reds .lightness .color-5 {
-  background-color: hsl(350, 100%, 20%);
-}
-
-/* Red saturation decreases by 15 */
-.reds .saturation .color-1 {
-}
-
-.reds .saturation .color-2 {
-  background-color: hsl(350, 85%, 50%);
-}
-
-.reds .saturation .color-3 {
-  background-color: hsl(350, 70%, 50%);
-}
-
-.reds .saturation .color-4 {
-  background-color: hsl(350, 55%, 50%);
-}
-
-.reds .saturation .color-5 {
-  background-color: hsl(350, 40%, 50%);
-}
-
-/* Red hue increases by 15 */
-.reds .hue .color-1 {
-}
-
-.reds .hue .color-2 {
-  background-color: hsl(335, 100%, 50%);
-}
-
-.reds .hue .color-3 {
-  background-color: hsl(350, 100%, 50%);
-}
-
-.reds .hue .color-4 {
-  background-color: hsl(5, 100%, 50%);
-}
-
-.reds .hue .color-5 {
-  background-color: hsl(20, 100%, 50%);
-}
-
-/* Green Swatches */
-
-.greens .base-color {
-  color: #00ff2a;
-}
-
-/* Green lightness decreases by 20 */
-.greens .lightness .color-1 {
-}
-
-.greens .lightness .color-2 {
-  background-color: hsl(103, 100%, 70%);
-}
-
-.greens .lightness .color-3 {
-  background-color: hsl(103, 100%, 50%);
-}
-
-.greens .lightness .color-4 {
-  background-color: hsl(103, 100%, 30%);
-}
-
-.greens .lightness .color-5 {
-  background-color: hsl(104, 100%, 10%);
-}
-
-/* Green saturation decreases by 20 */
-.greens .saturation .color-1 {
-}
-
-.greens .saturation .color-2 {
-  background-color: hsl(130, 80%, 50%);
-}
-
-.greens .saturation .color-3 {
-  background-color: hsl(130, 60%, 50%);
-}
-
-.greens .saturation .color-4 {
-  background-color: hsl(130, 40%, 50%);
-}
-
-.greens .saturation .color-5 {
-  background-color: hsl(131, 20%, 50%);
-}
-
-/* Green hue increases by 22 */
-.greens .hue .color-1 {
-}
-
-.greens .hue .color-2 {
-  background-color: hsl(108, 100%, 50%);
-}
-
-.greens .hue .color-3 {
-  background-color: hsl(130, 100%, 50%);
-}
-
-.greens .hue .color-4 {
-  background-color: hsl(152, 100%, 50%);
-}
-
-.greens .hue .color-5 {
-  background-color: hsl(174, 100%, 50%);
-}
-
-/* Blue Swatches */
-
-.blues .base-color {
-  color: #0055ff;
-}
-
-/* Blue lightness decreases by 20 */
-.blues .lightness .color-1 {
-}
-
-.blues .lightness .color-2 {
-  background-color: hsl(220, 100%, 70%);
-}
-
-.blues .lightness .color-3 {
-  background-color: hsl(220, 100%, 50%);
-}
-
-.blues .lightness .color-4 {
-  background-color: hsl(220, 100%, 30%);
-}
-
-.blues .lightness .color-5 {
-  background-color: hsl(220, 100%, 10%);
-}
-
-/* Blue saturation decreases by 20 */
-.blues .saturation .color-1 {
-}
-
-.blues .saturation .color-2 {
-  background-color: hsl(220, 80%, 50%);
-}
-
-.blues .saturation .color-3 {
-  background-color: hsl(220, 60%, 50%);
-}
-
-.blues .saturation .color-4 {
-  background-color: hsl(220, 40%, 50%);
-}
-
-.blues .saturation .color-5 {
-  background-color: hsl(220, 20%, 50%);
-}
-
-/* Blue hue decreases by 20 */
-.blues .hue .color-1 {
-}
-
-.blues .hue .color-2 {
-  background-color: hsl(240, 100%, 50%);
-}
-
-.blues .hue .color-3 {
-  background-color: hsl(220, 100%, 50%);
-}
-
-.blues .hue .color-4 {
-  background-color: hsl(200, 100%, 50%);
-}
-
-.blues .hue .color-5 {
-  background-color: hsl(180, 100%, 50%);
-}
-
-/* Footer */
+/* fucking last*/
 
 footer {
-  position: relative;
-  height: 30rem;
-  padding: 7.8125rem 30% 0 30%;
-  background: url("https://content.codecademy.com/courses/freelance-1/unit-6/footer.png")
-    center center no-repeat;
-  background-size: cover;
-  text-align: center;
-  font-size: 1.125rem;
-  line-height: 1.4;
-  color: white;
+    position: relative;
+    top: 4rem;
+    height: 4rem;
+    padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: space-between;
 }
 
-footer:before {
-  /* Overlay */
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0/7);
+footer nav {
+    list-style: none;
+    display: inline-block;
 }
 
-footer * {
-  position: relative; /* Makes elements display above overlay. */
+ul {
+    list-style: none;
+    display: flex;
 }
 
-footer strong {
-  display: block;
-  margin-bottom: 1.25rem;
-  font-size: 2.25rem;
+li {
+    padding-left: 10px;
 }
 
-footer p {
-  margin-bottom: 4.3125rem;
-}
-
-footer .button {
-  padding: 1.25rem 3.75rem;
-  border-radius: 4px;
-  background-color: orange;
-}
-
-@media only screen and (max-width: 560px) {
-  footer {
-    padding: 4.8125rem 15% 0 15%;
-  }
+footer {
+    margin-right: 1.5rem;
 }
