--- a/index.css
+++ b/index.css
@@ -1,16 +1,34 @@
 * {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     padding: 0%;
     margin: 0%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h4 {
+    font-size: 17px;
 }
 
 
 /* menubar */
 
 .bar {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 7%;
+    box-shadow: 0px 0px 20px -10px black;
+    opacity: 50%;
 }
 
 .topbar a {
@@ -20,8 +38,8 @@
 }
 
 .img_logo {
-    padding: 1% 2%;
-    width: 5%;
+    padding-left: 3%;
+    width: 3%;
     height: auto;
 }
 
@@ -33,11 +51,18 @@
     background-color: rgb(255, 227, 217);
     display: flex;
     justify-content: space-between;
-    padding: 5% 0%;
+    padding: 5% 0% 5% 0%;
 }
 
 .motion_name {
+    display: flex;
     padding: 5% 0%;
+    align-items: center;
+}
+
+.motion_name>span {
+    font-weight: bold;
+    font-size: 40px;
 }
 
 .Hometext {
@@ -45,17 +70,86 @@
 }
 
 .Home>img {
-    padding-right: 10%;
-    transform: rotate( -10deg);
-    width: 30%;
+    padding-right: 15%;
+    width: 25%;
     height: auto;
+}
+
+
+/* !!! 文字動畫切換 !!! */
+
+.dropping-texts {
+    font-weight: bold;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.dropping-texts>div {
+    font-size: 0px;
+    opacity: 0;
+    position: absolute;
+    font-size: 40px;
+}
+
+.dropping-texts>div:nth-child(1) {
+    animation: roll 6s ease-in infinite 0s;
+    color: rgb(255, 182, 185);
+}
+
+.dropping-texts>div:nth-child(2) {
+    animation: roll 6s ease-in infinite 2s;
+    color: rgb(0 185 142);
+}
+
+.dropping-texts>div:nth-child(3) {
+    animation: roll 6s ease-in infinite 4s;
+    color: rgb(255, 182, 185);
+}
+
+@keyframes roll {
+    0% {
+        font-size: 0px;
+        opacity: 0;
+    }
+    3% {
+        opacity: 1;
+    }
+    5% {
+        font-size: inherit;
+    }
+    20% {
+        font-size: inherit;
+        opacity: 1;
+    }
+    27% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 
 /* About Me */
 
 .About_Me {
-    padding: 2% 0%;
+    padding: 4% 0%;
+}
+
+.About_Me_Title,
+.My_Skills_Title,
+.My_Portfolio_Title {
+    display: flex;
+    justify-content: center;
+}
+
+.About_Me_Title>span,
+.My_Skills_Title>span,
+.My_Portfolio_Title>span {
+    font-weight: bold;
+    font-size: xxx-large;
+    padding-bottom: 2%;
 }
 
 .About_Me>h1 {
@@ -96,14 +190,14 @@
 }
 
 .About_text {
-    padding: 0% 10% 0% 0%;
+    padding: 0% 10% 0% 10%;
 }
 
 
 /* My Skills */
 
 .My_Skills {
-    padding: 2% 0%;
+    padding: 4% 0%;
     background-color: rgb(255, 227, 217);
 }
 
@@ -185,7 +279,11 @@
 /* portfolio */
 
 .portfolio {
-    padding: 2% 0%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4% 0%;
+    flex-direction: column;
 }
 
 .portfolio>h1 {
@@ -223,4 +321,138 @@
 .project {
     display: flex;
     justify-content: space-evenly;
+}
+
+
+/* MM Project */
+
+.MM_Project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    border-radius: 50px;
+    box-shadow: 0px 0px 20px -10px black;
+    padding: 3% 5% 0% 5%;
+    cursor: pointer;
+    flex-direction: column;
+}
+
+.MM_Project>.fullproject>img {
+    width: 100%;
+}
+
+.fullproject {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pre {
+    opacity: 86%;
+    background-color: gray;
+    width: 2%;
+    padding: 25.5% 2%;
+    border: none;
+    opacity: 37%;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    font-size: 49px;
+    border-radius: 40px 0px 0px 40px;
+}
+
+#next {
+    opacity: 86%;
+    background-color: gray;
+    width: 2%;
+    padding: 25.5% 2%;
+    border: none;
+    opacity: 37%;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    font-size: 49px;
+    border-radius: 0px 40px 40px 0px;
+}
+
+#pid {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+#pre:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+ ::placeholder {
+    color: #777;
+}
+
+.fullproject_title {
+    font-weight: bold;
+    margin: 1%;
+}
+
+
+/* 滑動按鍵 */
+
+.showHidden {
+    display: flex;
+    margin-top: 5%;
+    font-weight: bold;
+    padding: 2%;
+    font-size: 20px;
+    border: none;
+    background-color: rgb(255, 227, 217);
+    border-radius: 60% 40% 60% 40%;
+    border-radius: -6%;
+    box-shadow: 0px 0px 20px -10px black;
+    animation: heart 1.3s ease-in-out infinite alternate;
+}
+
+@keyframes heart {
+    from {
+        transform: translate(0, 0)
+    }
+    to {
+        transform: translate(0, 10%)
+    }
+    /* 下浮高度 */
+}
+
+
+/* Contect */
+
+.Contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 4% 0%;
+    background-color: rgb(255, 227, 217);
+}
+
+.Contact_Title {
+    font-weight: bold;
+    font-size: xxx-large;
+    padding-bottom: 2%;
+}
+
+.Contact_text {
+    padding: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    font-size: 20px;
+}
+
+.Contact_text>li {
+    font-weight: bold;
+    font-size: 20px;
+    padding: 2vh;
+}
+
+
 }
